tests/NormalTests/paczka1/small_fuzzy/74964785.err
Error in line 1: dOBDmAVMUc S567 33,7
Error in line 11: dOBDmAVMUc A837 56,3
Error in line 15: 2Pw A837 75,73
Error in line 14: 2Pw S641 11,4
